<resources>
    <string name="app_name">智慧货运</string>
    <string name="explain_left_icon">左边的图标</string>
    <string name="explain_right_text">右边的图标</string>
    <string name="format_certificate_date">%1$s至%2$s</string>
    <string name="format_main_list_way">%1$s | %2$s(%3$s)</string>
    <string name="format_store_goods_info">%1$s | %2$s |%3$s</string>
    <string name="format_number_info">%1$s件 | %2$sm³ | %3$skg</string>
    <string name="format_number_info123">%1$s | %2$s件 | %3$sm³ | %4$skg</string>
    <string name="format_store_info">%1$s | %2$s℃ %3$s</string>
    <string name="format_arrive_info">%1$s(%2$s)</string>
    <string name="format_company_info">%1$s | %2$s</string>
    <string name="format_company_info1">%1$s | %2$s | %3$s | %4$s</string>
    <string name="format_cargo_cabin"> 约%1$sm³ | %2$sKG | %3$s </string>
    <string name="format_allocate_info">%1$s件/%2$skg/%3$sm³</string>
    <string name="format_allocate_ddress_info">%1$s     %2$s</string>
    <string name="format_return_good_info">%1$s | %2$s件 | %3$sKG | %4$sm³</string>
    <string name="format_return_good_info12">%1$s | %2$d件 | %3$dkg | %4$dm³</string>
    <string name="format_receive_uld">ULD:%1$s/%2$skg</string>
    <string name="goods_name">品名</string>
    <string name="goods_number">件数</string>
    <string name="goods_weight">重量</string>
    <string name="goods_volume">体积</string>
    <string name="goods_package_type">包装类型</string>
    <string name="arrive_plan_time">预</string>
    <string name="please_choose">请选择</string>
    <string name="unqualified">不合格</string>
    <string name="qualified">合格</string>
    <string name="no_data">暂无数据</string>
    <string name="load_error">加载失败</string>
    <string name="loading">正在加载...</string>
    <string name="format_store_number_goods_info">%1$s件 | %2$skg | %3$sm³</string>
    <string name="format_tally_info">总件数：%1$d 总重量：%2$.2fKG</string>
    <string name="format_version_name">版本号：%1$d</string>
    <string name="text_newest_version">最新版本</string>
    <string name="format_goods_info">%1$d件|%2$.2fkg|%3$.2fm³</string>
    <string name="format_goods_inport">%1$s件|%2$skg</string>
    <string name="format_doc_arrive_info">文件到达:%1$s</string>
    <string name="format_doc_number_info">%1$d件/%2$dkg</string>
    <string name="format_customs_arrive_info">海关监督:%1$s 是否转运:%2$s</string>
    <string name="format_customs_number_info">舱单:%1$d件/%2$dkg</string>
    <string name="format_unpackage_info">拆 箱 板:%1$s 是否冷藏:%2$s</string>
    <string name="format_unpackage_number_info">理货:%1$d件/%2$dkg</string>
    <string name="format_inport_tally_store_info">%1$s|库位%2$d</string>
    <string name="format_dynamic_info">%1$s/%2$s</string>
    <string name="format_new_task_push">新任务到达(%1$d)</string>
    <string name="format_delivery_verify_no_origin">原运单号: %1$s</string>
    <string name="format_delivery_verify_no_new">新运单号: %1$s</string>
    <string name="format_return_name_number">%1$s|%2$d件</string>
    <string name="format_return_reason">原因： %1$s</string>
    <string name="alphabet_and_number">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789-</string>
    <string name="format_inbound_sorting_title">%1$s理货\n%2$s</string>
    <string name="format_waybill_total_info">总运单数：%1$d 总件数：%2$d</string>
    <string name="format_inbound_sorting_total">货物总计:件数:%1$d重量:%2$1.1f分拣件数:%3$d分拣重量:%4$1.1f\n邮件总计:件数:%5$d重量:%6$1.1f分拣件数:%7$d分拣重量:%8$1.1f\n总计:件数：%9$d重量:%10$1.1f分拣件数:%11$d分拣重量:%12$1.1f</string>
</resources>
