<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginBottom="@dimen/dp_10">
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:background="@drawable/shape_rect_gray"
       android:padding="@dimen/dp_10"
       android:orientation="vertical">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="@dimen/dp_40"
           android:orientation="horizontal">
           <TextView
               android:id="@+id/tv_way_bill"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:background="@drawable/shape_rect_blue_2e81fd"
               android:drawableStart="@mipmap/tracking_number"
               android:drawablePadding="@dimen/dp_6"
               android:gravity="center"
               android:textSize="@dimen/sp_16"
               android:paddingStart="9dp"
               android:paddingTop="@dimen/dp_8"
               android:paddingEnd="9dp"
               android:paddingBottom="@dimen/dp_8"
               android:textColor="#136BEF"
               android:text="000-99999999"
               android:textStyle="bold" />
           <Space
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_weight="1"/>
           <LinearLayout
               android:id="@+id/ll_flight_info_container"
               android:layout_width="150dp"
               android:layout_height="wrap_content"
               android:layout_gravity="center_vertical"
               android:gravity="center_vertical"
               android:layout_marginStart="@dimen/dp_5"
               android:layout_marginEnd="@dimen/dp_5"
               android:orientation="horizontal" />
       </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_10"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                tools:text="@string/format_doc_arrive_info"
                android:textColor="#888888"
                android:textSize="@dimen/sp_14"
                android:id="@+id/tv_doc_arrive_info"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                tools:text="@string/format_doc_number_info"
                android:id="@+id/tv_doc_number_info"
                android:textColor="#888888"
                android:textSize="@dimen/sp_14"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_10"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/format_customs_arrive_info"
                android:textColor="#888888"
                android:textSize="@dimen/sp_14"
                android:id="@+id/tv_customs_info"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/format_customs_number_info"
                android:textColor="#888888"
                android:textSize="@dimen/sp_14"
                android:id="@+id/tv_customs_number_info"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_10"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                tools:text="@string/format_unpackage_info"
                android:textColor="#888888"
                android:textSize="@dimen/sp_14"
                android:id="@+id/tv_unpackage_info"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                tools:text="@string/format_unpackage_number_info"
                android:id="@+id/tv_unpackage_number_info"
                android:textColor="#888888"
                android:textSize="@dimen/sp_14"/>
        </LinearLayout>
       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="@dimen/dp_10"
           android:layout_marginBottom="@dimen/dp_10"
           android:text="@string/format_inport_tally_store_info"
           android:id="@+id/tv_store_info"
           android:textColor="#888888"
           android:textSize="@dimen/sp_14"
           android:gravity="center_vertical|end"/>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal">
           <TextView
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_weight="1"
               android:text="无异常"
               android:id="@+id/tv_exception"
               android:textColor="#888888"
               android:textSize="@dimen/sp_14"
               android:gravity="center_vertical"/>
           <TextView
               android:layout_width="73dp"
               android:layout_height="27dp"
               android:background="@drawable/shape_rect_blue_1aa6ff"
               android:text="修改"
               android:gravity="center"
               android:textColor="@color/white"
               android:id="@+id/tv_modify"/>
       </LinearLayout>
   </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_8"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/dp_40"
            >
            <TextView
                android:layout_width="@dimen/dp_4"
                android:layout_height="match_parent"
                android:background="@drawable/shape_half_gray_circle_right"/>
            <View
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layerType="software"
                android:layout_gravity="center_vertical"
                android:background="@drawable/shape_gray_gap_line"/>
            <TextView
                android:layout_width="@dimen/dp_4"
                android:layout_height="match_parent"
                android:background="@drawable/shape_half_gray_circle_left"/>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>