<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dp_10"
    android:background="@color/transparent">

    <LinearLayout
        android:id="@+id/item_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape_rect_gray"
        android:orientation="vertical"
        android:padding="@dimen/dp_10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_rect_blue_cce4"
                android:drawableStart="@mipmap/tracking_number"
                android:drawablePadding="@dimen/dp_10"
                android:gravity="center"
                android:paddingStart="9dp"
                android:paddingTop="@dimen/dp_8"
                android:paddingEnd="9dp"
                android:paddingBottom="@dimen/dp_8"
                android:textColor="@color/blue_093"
                android:textStyle="bold" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tv_number_info"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/format_number_info"
                android:textColor="@color/text_main" />

            <ImageView
                android:id="@+id/tv_road"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginBottom="@dimen/dp_10"
                android:src="@mipmap/channel"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_road_info"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_marginEnd="0dp"
                android:gravity="center"
                android:text="@string/format_main_list_way"
                android:textColor="@color/black_3"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_store_info"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/format_store_info"
                android:textColor="@color/text_main2" />


            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />


            <TextView
                android:id="@+id/tv_weight_judge"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_marginEnd="0dp"
                android:gravity="center_vertical"
                android:textColor="@color/text_main" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:orientation="horizontal"
            android:visibility="gone">

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tv_step_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textColor="@color/color_00f" />
        </LinearLayout>

        <qx.app.freight.qxappfreight.widget.CollapsableLinearLayout
            android:id="@+id/coll_listview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_more"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="13dp"
                    android:background="@drawable/shape_gray_gap_line_9797"
                    android:layerType="software" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_40"
                    android:layout_marginTop="@dimen/dp_10"
                    android:background="@color/gray_576"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="序号"
                        android:textColor="@color/white" />

                    <View
                        android:layout_width="1px"
                        android:layout_height="match_parent"
                        android:background="@color/gray_eff" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="@string/goods_name"
                        android:textColor="@color/white" />

                    <View
                        android:layout_width="1px"
                        android:layout_height="match_parent"
                        android:background="@color/gray_eff" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/goods_number"
                        android:textColor="@color/white" />

                    <View
                        android:layout_width="1px"
                        android:layout_height="match_parent"
                        android:background="@color/gray_eff" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/goods_weight"
                        android:textColor="@color/white" />

                    <View
                        android:layout_width="1px"
                        android:layout_height="match_parent"
                        android:background="@color/gray_eff" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/goods_volume"
                        android:textColor="@color/white" />

                    <View
                        android:layout_width="1px"
                        android:layout_height="match_parent"
                        android:background="@color/gray_eff" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="@string/goods_package_type"
                        android:textColor="@color/white" />
                </LinearLayout>


                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_detail_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_2"
                    android:layout_marginTop="13dp"
                    android:background="@drawable/shape_gray_gap_line_9797"
                    android:layerType="software" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:layout_marginBottom="@dimen/dp_10"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_flight_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/shape_rect_blue_cce4"
                        android:drawableLeft="@mipmap/flight"
                        android:drawablePadding="3dp"
                        android:paddingLeft="@dimen/dp_5"
                        android:paddingTop="@dimen/dp_4"
                        android:paddingRight="@dimen/dp_5"
                        android:paddingBottom="@dimen/dp_4"
                        android:textColor="@color/blue_093"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_10"
                        android:src="@mipmap/ji" />

                    <TextView
                        android:id="@+id/tv_arrive_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:gravity="center_vertical"
                        android:text="@string/format_arrive_info"
                        android:textSize="@dimen/sp_12" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/tv_company_info"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/dp_40"
                        android:gravity="center_vertical"
                        android:text="@string/format_company_info"
                        android:textSize="@dimen/sp_12" />
                </LinearLayout>
            </LinearLayout>
        </qx.app.freight.qxappfreight.widget.CollapsableLinearLayout>

        <ImageView
            android:id="@+id/iv_control_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginTop="9dp"
            android:src="@mipmap/expand" />
    </LinearLayout>


</FrameLayout>
