<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout

        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/goods_name"
                android:textColor="@color/black_3" />

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@color/gray_dbdb" />

            <TextView
                android:id="@+id/tv_number"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/goods_number"
                android:textColor="@color/black_3" />

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@color/gray_dbdb" />

            <TextView
                android:id="@+id/tv_weight"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.2"
                android:gravity="center"
                android:text="重量(kg)"
                android:textColor="@color/black_3" />

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@color/gray_dbdb" />

            <TextView
                android:id="@+id/tv_volume"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.2"
                android:gravity="center"
                android:text="体积(m³)"
                android:textColor="@color/black_3" />

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@color/gray_dbdb" />

            <TextView
                android:id="@+id/tv_type"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/goods_package_type"
                android:textColor="@color/black_3" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray_dbdb" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_delete"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:background="@color/white"
        android:gravity="center"
        >
        <ImageView
            android:id="@+id/iv_edit"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@mipmap/ic_input"
            />
        <ImageView
            android:id="@+id/iv_delete"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@mipmap/delete"
            />
    </LinearLayout>

</LinearLayout>